<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/nomal_header" />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/phone_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_alignParentLeft="true">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <AutoCompleteTextView
                android:id="@+id/txt_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/text_box"
                android:drawableLeft="@drawable/ic_phone_in_talk_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/prompt_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:paddingBottom="3dp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:paddingTop="3dp"
                android:singleLine="true"
                tools:ignore="RtlHardcoded" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edit_id_card"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/text_box"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/id_card"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="18"
                android:paddingBottom="3dp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                tools:ignore="RtlHardcoded" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/text_box"
                android:drawableLeft="@drawable/ic_password_black_24dp"
                android:drawablePadding="10dp"
                android:hint="新密码"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="3dp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                tools:ignore="RtlHardcoded" />

        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/phone_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_bg"
            android:text="确定"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />


    </LinearLayout>


</RelativeLayout>